--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ pandas = "^2.2.3"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
 timezonefinder = "^6.5.5"
+fastapi = "^0.115.6"
+uvicorn = "^0.32.1"
+ephem = "^4.1.6"
+aiohttp = "^3.11.10"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
