--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ fastapi = "^0.115.6"
 uvicorn = "^0.32.1"
 ephem = "^4.1.6"
 aiohttp = "^3.11.10"
+altair = "^5.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
