--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,16 @@ uvicorn = "^0.32.1"
 ephem = "^4.1.6"
 aiohttp = "^3.11.10"
 altair = "^5.5.0"
+cython = "^3.0.11"
+setuptools = "^75.6.0"
+vl-convert-python = "^1.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core", "setuptools", "wheel", "cython>=3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.build]
+script = "build.py"
