alt marriage finder now working

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-GEONAMES_USERNAME=jox51
+GEONAMES_USERNAME=domin1982
+# GEONAMES_USERNAME=jox51
 POCKETBASE_EMAIL=salidom9738@gmail.com
 POCKETBASE_PASSWORD=KEtones@!82
 ASTRONOMY_APP_ID=8100c967-9b64-40f0-bad4-881c3ea223f8
